refactor: update Dockerfile for improved image management and dependency installation
- Changed base image to allow specification via build argument.
- Updated working directory paths to reflect new structure.
- Consolidated Python dependency installation into a single RUN command to reduce image size.

--- a/data-retrieval/Dockerfile
+++ b/data-retrieval/Dockerfile
@@ -1,22 +1,23 @@
-# Use Python 3.10 as base image
-FROM acr.aishu.cn/as/sailor-python:3.11-base
+# 基础镜像参数，可通过 --build-arg BASE_IMAGE=xxx 指定
+# FROM acr.aishu.cn/as/sailor-python:3.11-base
+ARG BASE_IMAGE=python:3.11
+FROM ${BASE_IMAGE}
 
 # 设置工作目录
 WORKDIR /app
 
 # 将当前目录内容复制到容器中
-COPY ./ /af-agent
+COPY ./ /data_retrieval
 
 # 设置工作目录
-WORKDIR /af-agent
+WORKDIR /data_retrieval
 
-# 安装Python依赖
-RUN pip install sandbox-env==0.1.0 --no-cache-dir -i http://repohub.aishu.cn/repository/pip-hub/simple/  --trusted-host repohub.aishu.cn
-RUN pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
-# RUN pip install --no-cache-dir ./tmp/sandbox_env-0.1.0-py3-none-any.whl -i https://pypi.tuna.tsinghua.edu.cn/simple
+# 安装Python依赖（合并为单层减少镜像体积）
+RUN pip install --no-cache-dir ./tmp/sandbox_env-0.1.0-py3-none-any.whl && \
+    pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
 
 # 设置子目录为工作目录
-WORKDIR /af-agent/src/data_retrieval/tools
+WORKDIR /data_retrieval/src/data_retrieval/tools
 
 # 使端口可用
 EXPOSE 9100
