--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ["setuptools"]
 
 [project]
-name = "data-retrieval"
+name = "kweaver-data-retrieval"
 version = "0.1.0"
 authors = [
   { name="Chen Xiao", email="xavier.chen@aishu.cn" },
