--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools"]
 
 [project]
 name = "kweaver-data-retrieval"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
   { name="Chen Xiao", email="xavier.chen@aishu.cn" },
 ]
-description = "A library for building AF agent"
-readme = "README.md"
+description = "A library for Kweaver data retrieval"
+readme = "README.pypi.md"
 requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -57,6 +57,7 @@ windows = []
 
 [tool.setuptools.packages.find]
 where = ["src"]
+exclude = ["tests", "tests.*"]
 
 [tool.setuptools.package-data]
 "data_retrieval.prompts.tools_prompts.text2metric_prompt" = ["params_json.txt"]
