refactor(helm): unify ingress configuration using depServices.class-443
- Replace service.ingressclassname with depServices.class-443.ingressClass
- Update ingress templates to use {{ index .Values.depServices "class-443" "ingressClass" }}
- Remove deprecated service.ingressclassname from values.yaml files
- Add Makefile and .gitignore for agent-memory/helm and agent-web/charts
- Affected services: agent-app, agent-executor, agent-factory, agent-memory, agent-web

--- a/agent-app/helm/agent-app/templates/ingress.yaml
+++ b/agent-app/helm/agent-app/templates/ingress.yaml
@@ -10,9 +10,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/service-upstream: "true" # 使用客户端源ip
 spec:
-{{- if .Values.service.ingressclassname }}
-  ingressClassName: "{{.Values.service.ingressclassname}}"
-{{- end }}
+  ingressClassName: {{ index .Values.depServices "class-443" "ingressClass" }}
   rules:
   - http:
       paths:
