--- a/agent-factory/helm/agent-factory/templates/ingress.yaml
+++ b/agent-factory/helm/agent-factory/templates/ingress.yaml
@@ -9,9 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: "500M"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-{{- if .Values.service.ingressclassname }}
-  ingressClassName: "{{.Values.service.ingressclassname}}"
-{{- end }}
+  ingressClassName: {{ index .Values.depServices "class-443" "ingressClass" }}
   rules:
   - http:
       paths:
