--- a/.github/workflows/build-data-retrieval.yml
+++ b/.github/workflows/build-data-retrieval.yml
@@ -14,6 +14,69 @@ on:
     types: [published]
   workflow_dispatch:
     inputs:
+      publish:
+        description: 'Publish to PyPI'
+        required: false
+        default: 'false'
+        type: boolean
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: data-retrieval
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+
+      - name: Build package
+        run: python -m build
+
+      - name: Check package
+        run: twine check dist/*
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: data-retrieval-dist
+          path: data-retrieval/dist/
+          retention-days: 30
+
+      - name: Publish to PyPI
+        if: github.event_name == 'release' || (github.event.inputs.publish == 'true' && github.ref == 'refs/heads/main')
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: twine upload dist/*
+
+name: Build data-retrieval Package
+
+on:
+  push:
+    branches: [main, master, 'release/*']
+    paths:
+      - 'data-retrieval/**'
+      - '.github/workflows/build-data-retrieval.yml'
+  pull_request:
+    branches: [main, master]
+    paths:
+      - 'data-retrieval/**'
+  release:
+    types: [published]
+  workflow_dispatch:
+    inputs:
       publish_target:
         description: 'Publish target'
         required: false
