--- a/.github/workflows/build-data-retrieval.yml
+++ b/.github/workflows/build-data-retrieval.yml
@@ -14,14 +14,18 @@ on:
     types: [published]
   workflow_dispatch:
     inputs:
-      publish:
-        description: 'Publish to PyPI'
+      publish_target:
+        description: 'Publish target'
         required: false
-        default: 'false'
-        type: boolean
+        default: 'none'
+        type: choice
+        options:
+          - none
+          - testpypi
+          - pypi
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -36,60 +40,17 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install build dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build twine
+          pip install -e ".[dev]"
 
-      - name: Build package
-        run: python -m build
+      - name: Run tests
+        run: pytest tests/ -v --tb=short
 
-      - name: Check package
-        run: twine check dist/*
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: data-retrieval-dist
-          path: data-retrieval/dist/
-          retention-days: 30
-
-      - name: Publish to PyPI
-        if: github.event_name == 'release' || (github.event.inputs.publish == 'true' && github.ref == 'refs/heads/main')
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload dist/*
-
-name: Build data-retrieval Package
-
-on:
-  push:
-    branches: [main, master, 'release/*']
-    paths:
-      - 'data-retrieval/**'
-      - '.github/workflows/build-data-retrieval.yml'
-  pull_request:
-    branches: [main, master]
-    paths:
-      - 'data-retrieval/**'
-  release:
-    types: [published]
-  workflow_dispatch:
-    inputs:
-      publish_target:
-        description: 'Publish target'
-        required: false
-        default: 'none'
-        type: choice
-        options:
-          - none
-          - testpypi
-          - pypi
-
-jobs:
   build:
     runs-on: ubuntu-latest
+    needs: test
     defaults:
       run:
         working-directory: data-retrieval
