--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -56,6 +56,14 @@ linux = [
   "gunicorn>=21.2.0"
 ]
 windows = []
+dev = [
+  "pytest>=8.0.0",
+  "pytest-cov>=4.0.0",
+  "pytest-asyncio>=0.23.0",
+  "flake8>=7.0.0",
+  "autopep8>=2.0.0",
+  "ruff>=0.1.0"
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
