chore: Update dependencies in pyproject.toml and uv.lock
- Added 'circuitbreaker' as a new dependency in pyproject.toml and updated its version in uv.lock.
- Included 'backports-asyncio-runner' and 'pytest-asyncio' in uv.lock to support asynchronous testing.
- Updated the version of 'kweaver-data-retrieval' to 0.1.3 and added additional development dependencies for improved testing capabilities.

--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -48,7 +48,8 @@ dependencies = [
   "jupyter-kernel-gateway==3.0.1",
   "sqlglot[rs]==26.21.0",
   "nebula3-python==3.5.0",
-  "rank-bm25==0.2.2"
+  "rank-bm25==0.2.2",
+  "circuitbreaker>=2.0.0"
 ]
 
 [project.optional-dependencies]
