--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
   "jieba==0.42.1",
   "faiss-cpu>=1.8",
   "fastapi>=0.115.0",
+  "uvicorn>=0.27.0",
   "openai>=1.68.2",
   "httpx==0.27.2",
   "jupyter-kernel-gateway==3.0.1",
