chore (data-retrieval): Update dependencies and refactor sandbox environment references
- Updated the Dockerfile to install 'kweaver-sandbox-runtime' version 0.1.1.
- Modified 'pyproject.toml' and 'requirements.txt' to upgrade 'aiohttp' to version 3.12.0 and 'pydantic' to version 2.11.5, along with other dependency updates.
- Changed references from 'sandbox_env' to 'sandbox_runtime' in multiple source files for consistency.
- Removed an outdated dependency reference in the documentation for sandbox session management.

--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -23,8 +23,8 @@ dependencies = [
   "langchain_core==0.2.3",
   "langchain_openai==0.1.8",
   "Requests==2.32.3",
-  "aiohttp==3.9.4",
-  "pydantic==2.7.3",
+  "aiohttp==3.12.0",
+  "pydantic==2.11.5",
   "pandas==2.2.2",
   "async-timeout==4.0.3",
   "pycryptodome==3.20.0",
@@ -36,13 +36,14 @@ dependencies = [
   "vegafusion==1.6.9",
   "tabulate==0.9.0",
   "redis==5.0.8",
-  "pydantic-settings==2.1.0",
+  "pydantic-settings==2.12.0",
   "sqlparse==0.5.1",
   "sql_metadata==2.13.0",
   "pyahocorasick==2.0.0",
   "jieba==0.42.1",
   "faiss-cpu>=1.8",
   "fastapi>=0.115.0",
+  "kweaver-sandbox-runtime==0.1.1",
   "uvicorn>=0.27.0",
   "openai>=1.68.2",
   "httpx==0.27.2",
