feat(decision-agent): integrate OpenTelemetry from agent-app branch
Add OpenTelemetry observability support merged from agent-app:
- New files: provider.go, logs/logger.go, metrics/metrics.go,
  middleware/injector.go, trace/trace.go
- Add OtelConfig to conf/config.go and conf/opentelemetry.go
- Add OpenTelemetry Provider initialization in main.go
- Add otelgin middleware to httpserver.go (pub/pri routes)
- Update chat.go to use otelTrace and logs
- Add opentelemetry config to Helm values.yaml and configmap.yaml
- Add opentelemetry config example to agent-factory.yaml.example
- Update appruntime/version.go with TraceInstrumentationName

OpenTelemetry is disabled by default (enabled: false).

--- a/agent-factory-v2/helm/agent-factory/templates/configmap.yaml
+++ b/agent-factory-v2/helm/agent-factory/templates/configmap.yaml
@@ -73,6 +73,8 @@ data:
       {{- toYaml .Values.depServices.agentFactory | nindent 6 }}
     biz_domain:
       {{- toYaml .Values.depServices.bizDomain | nindent 6 }}
+    opentelemetry:
+      {{- toYaml .Values.opentelemetry | nindent 6 }}
   mq_config.yaml: |
     {{- toYaml .Values.depServices.mq | nindent 4 }}
 
