--- a/agent-factory-v2/helm/agent-factory/values.yaml
+++ b/agent-factory-v2/helm/agent-factory/values.yaml
@@ -240,3 +240,23 @@ observability:
   httpMetricFeedIngesterUrl: http://feed-ingester-service:13031/api/feed_ingester/v1/jobs/dip-o11y-metric/events
   grpcTraceFeedIngesterUrl: feed-ingester-service:30013
   grpcTraceJobId: dip-o11y-trace-grpc
+
+# OpenTelemetry 配置 (新增)
+opentelemetry:
+  service_name: "agent-factory"
+  service_version: "1.0.0"
+  trace:
+    enabled: false
+    exporter: "console"
+    http_endpoint: "http://localhost:4318/v1/traces"
+    sampling_rate: 1.0
+  log:
+    enabled: false
+    exporter: "console"
+    http_endpoint: "http://localhost:4318/v1/logs"
+    level: "info"
+  metric:
+    enabled: false
+    exporter: "console"
+    http_endpoint: "http://localhost:4318/v1/metrics"
+    export_interval: 10
