--- a/data-retrieval/helm/data-retrieval/values.yaml
+++ b/data-retrieval/helm/data-retrieval/values.yaml
@@ -27,23 +27,24 @@ depServices:
     connectType: sentinel
     enableSSL: false
     connectInfo:
-      sentinelHost: kg-redis-cluster-proton-redis-sentinel
-      sentinelPort: 26379
       username: root
       password: ""
+      host: ""
+      port: 26379
+      masterHost: ""
+      masterPort: 26379
+      slaveHost: ""
+      slavePort: 26379
+      sentinelHost: proton-redis-proton-redis-sentinel.resource.svc.cluster.local
+      sentinelPort: 26379
       sentinelUsername: root
       sentinelPassword: ""
       masterGroupName: mymaster
-      masterHost: xxx.dcs.huaweicloud.com
-      masterPort: 26379
-      slaveHost: xxx-readonly.dcs.huaweicloud.com
-      slavePort: 26379
-      host: ""
-      port: 26379
-    secretName: redis-ssl-secret
-    caName: ca.pem
-    certName: cert.pem
-    keyName: key.pem
+      poolSize: 10
+    secretName: ""
+    caName: ""
+    certName: ""
+    keyName: ""
   hydra:
     publicHost: "hydra-public"
     publicPort: "4444"
@@ -61,14 +62,6 @@ depServices:
     embeddingDimension: 768
     rerank_url: "http://mf-model-api:9898/api/private/mf-model-api/v1/small-model/reranker"
     rerank_model: "reranker"
-  graphDatabase:
-    type: "nebulaGraph"
-    host: "kg-nebula-cluster-proton-nebula-graphd"
-    port: "9669"
-    user: "root"
-    password: "nebula"
-    readonlyuser: "anydata"
-    readonlypassword: ""
 
 
 appConfig:
