refactor(agent-factory-v2): restructure httpserver module and add legacy path config
- Refactor httpserver.go into modular files under httpserver/ directory:
  - define.go: struct definitions and dependencies
  - init.go: initialization logic
  - interface.go: interface definitions
  - lifecycle.go: Start() and Shutdown() methods
  - router_health.go: health check routes
  - router_management.go: management routes (V3 public/private)
  - router_run.go: run routes (V1 public/private)

- Add keep_legacy_app_path config option:
  - Controls whether to register legacy /api/agent-app/ routes
  - Default: false (only new /api/agent-factory/ routes registered)
  - Added to config.go, yaml example, and Helm values/configmap

- Update main.go to use new httpserver package path

--- a/agent-factory-v2/helm/agent-factory/templates/configmap.yaml
+++ b/agent-factory-v2/helm/agent-factory/templates/configmap.yaml
@@ -51,6 +51,7 @@ data:
       host: "0.0.0.0"
       port: {{ .Values.service.port }}
       logger_level: {{ .Values.service.loggerLevel }}
+      keep_legacy_app_path: {{ .Values.service.keep_legacy_app_path }}
     hydra:
       user-mgnt:
         host: {{ .Values.depServices.hydra.userMgnt.host }}
