``` refactor(errors): remove deprecated function error classes
Remove unused function error classes that are no longer needed:
- AgentExecutor_Function_CodeError
- AgentExecutor_Function_InputError
- AgentExecutor_Function_RunError
- AgentExecutor_Function_OutputError

These classes were replaced by new exception handling approach in
app.common.exceptions module.

BREAKING CHANGE: The function error classes are removed from
the errors module. Use exceptions from app.common.exceptions
instead.

fix(tool): remove broken tool package initialization

Remove broken __init__.py file that was causing import issues
in the tool package. The package structure was previously
refactored but the __init__.py file contained incorrect exports
that led to circular dependencies and import failures.

This change removes the problematic file to allow proper
relative imports within the tool package modules.
```

--- a/agent-executor/pyproject.toml
+++ b/agent-executor/pyproject.toml
@@ -25,9 +25,9 @@ requires-python = ">=3.10"
     "structlog==24.1.0",
     "tika==3.1.0",
     "uvicorn==0.38.0",
-    "mq-sdk@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/proton-mq-python@1.7.4",
-    "telemetrysdk-python@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/TelemetrySDK-Python@2.6.1",
-    "dolphinlanguagesdk@git+ssh://devops.aishu.cn:22/AISHUDevOps/DIP/_git/dolphin-language@release/0.3.7",
+    "mq-sdk@git+https://github.com/kweaver-ai/proton-mq-sdk-py",
+    "tlogging",
+    "kweaver-dolphin",
 ]
 
 
@@ -54,4 +54,7 @@ test = [
 [tool.uv]
 index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 
+
 [tool.uv.sources]
+mq-sdk = { git = "https://github.com/kweaver-ai/proton-mq-sdk-py", rev = "release/1.9.0" }
+tlogging = { git = "https://github.com/kweaver-ai/TelemetrySDK-Python" }
