refactor(data-retrieval): Simplify authentication handling and clean up unused code
- Updated the Dockerfile to streamline Python dependency installation by removing the direct installation of 'kweaver-sandbox-runtime'.
- Refactored 'pyproject.toml' and 'requirements.txt' to remove unused dependencies and ensure only necessary packages are included.
- Removed the 'get_authorization' function and related authentication logic from various modules, as username/password authentication is no longer supported.
- Cleaned up example scripts and documentation to reflect the new token-based authentication approach.
- Deleted obsolete files related to the previous authentication mechanism.

--- a/data-retrieval/Dockerfile
+++ b/data-retrieval/Dockerfile
@@ -13,8 +13,7 @@ COPY ./ /data_retrieval
 WORKDIR /data_retrieval
 
 # 安装Python依赖（合并为单层减少镜像体积）
-RUN pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple kweaver-sandbox-runtime==0.1.1 && \
-    pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
+RUN pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
 
 # 设置子目录为工作目录
 WORKDIR /data_retrieval/src/data_retrieval/tools
