feat(agent-executor): add custom ToolInterruptException for tool interrupt handling
- Add ToolInterruptInfo dataclass with handle and data fields
- Add ToolInterruptException that wraps ToolInterruptInfo
- Replace Dolphin's ToolInterrupt with custom exception in:
  - interrupt_utils.py: check_and_raise_interrupt()
  - interrupt.py: InterruptHandler.handle_tool_interrupt()
  - agent_core_v2.py: exception catching
- Update Dockerfile build image version
- Comment out DolphinLanguageSDK path in agent-executor.spec

--- a/agent-backend/deploy/Dockerfile
+++ b/agent-backend/deploy/Dockerfile
@@ -1,4 +1,4 @@
-ARG buildImage=acr.aishu.cn/dip/py.build:3.10.18:20250109211000
+ARG buildImage=acr.aishu.cn/dip/py.build:3.10.18-20251030
 ARG baseImage=acr.aishu.cn/public/ubuntu:22.04.20241202
 ARG goBuildImage=acr.aishu.cn/dip/go.build:1.21.9.3.8.2024120203
 
