feat(agent-backend): refactor deployment architecture with unified Docker and supervisor
- Add unified multi-stage Dockerfile for agent-factory, agent-executor, and agent-memory
- Implement supervisor-based process management for all three services
- Add MQ SDK native libraries for both ARM and x86 architectures
- Update Helm templates with executor and memory service configurations
- Add configmap templates for executor-v2, executor, and memory services
- Update deployment.yaml with executor and memory port mappings
- Refactor pyproject.toml dependencies (comment out mq-sdk, tlogging, kweaver-dolphin)
- Add new dependencies: deprecated, jinja2, nebula3-python, sse-starlette
- Move old deployment files to deploy_bak directory
- Add MQ dependencies documentation
- Update .gitignore to exclude Makefile.local.mk and uv.lock
- Update agent-executor.spec comment for Dolphin package changes

--- a/agent-backend/agent-executor/.gitignore
+++ b/agent-backend/agent-executor/.gitignore
@@ -73,6 +73,7 @@ CLAUDE.md
 # Local Files
 # =============================================================================
 .local/
+Makefile.local.mk
 
 # =============================================================================
 # System and Temporary Files
@@ -81,3 +82,4 @@ CLAUDE.md
 pip-log.txt
 pip-delete-this-directory.txt
 
+uv.lock
