--- a/agent-backend/agent-executor/pyproject.toml
+++ b/agent-backend/agent-executor/pyproject.toml
@@ -9,12 +9,16 @@ requires-python = ">=3.10"
     "apscheduler==3.11.0",
     "arrow==0.15.8",
     "circuitbreaker==2.0.0",
+    "deprecated>=1.3.1",
     "fastapi==0.119.1",
     "jieba==0.42.1",
+    "jinja2>=3.1.6",
     "jsonschema==4.17.0",
     "limiter==0.5.0",
+    "nebula3-python>=3.8.3",
     "numpy==1.26.0",
     "opentelemetry-instrumentation-aiohttp-client==0.42b0",
+    "opentelemetry-sdk>=1.21.0",
     "pandas==2.2.1",
     "pycryptodome==3.20.0",
     "pydantic==2.12.2",
@@ -22,12 +26,16 @@ requires-python = ">=3.10"
     "pyyaml==6.0.1",
     "redis==4.6.0",
     "requests==2.31.0",
+    "sse-starlette>=3.0.3",
     "structlog==24.1.0",
     "tika==3.1.0",
     "uvicorn==0.38.0",
-    "mq-sdk@git+https://github.com/kweaver-ai/proton-mq-sdk-py",
-    "tlogging",
-    "kweaver-dolphin",
+    #     "mq-sdk@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/proton-mq-python@1.7.4",
+    #    "mq-sdk@git+https://github.com/kweaver-ai/proton-mq-sdk-py@release/1.9.0",
+    #    "telemetrysdk-python@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/TelemetrySDK-Python@2.6.1",
+    #    "telemetrysdk-python@git+https://github.com/kweaver-ai/TelemetrySDK-Python@2.4.2",
+    #    "tlogging",
+    #    "kweaver-dolphin",
 ]
 
 
@@ -56,5 +64,5 @@ index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 
 
 [tool.uv.sources]
-mq-sdk = { git = "https://github.com/kweaver-ai/proton-mq-sdk-py", rev = "release/1.9.0" }
-tlogging = { git = "https://github.com/kweaver-ai/TelemetrySDK-Python" }
+#mq-sdk = { git = "https://github.com/kweaver-ai/proton-mq-sdk-py", rev = "release/1.9.0" }
+#tlogging = { git = "https://github.com/kweaver-ai/TelemetrySDK-Python", rev = "2.4.2" }
