feat(decision-agent): enhance Docker build and deployment configuration
- Add .gitignore files to exclude SDK dependencies and build artifacts
- Add .dockerignore to optimize Docker build context
- Update Dockerfile:
  * Add data_migrations directory copy for agent-executor
  * Install kweaver-dolphin from test.pypi
  * Copy dict and uniqueryaccess JSON files for agent-factory
  * Change default UID/GID from 1000 to 1001
  * Enhance healthcheck to include both agent-factory and agent-executor
- Update supervisord.conf with RPC interface configuration
- Enhance Helm chart configuration:
  * Add observability settings (log/trace/metric) for services
  * Add Agent Executor telemetry configuration
  * Add Agent Memory LLM model configuration
  * Add new dependencies: opensearch, mf-model-api, agent-operator-integration
- Add liveness probe to deployment for better container health monitoring
- Add do-pyinstaller target to agent-executor Makefile

--- a/agent-backend/agent-executor/Makefile
+++ b/agent-backend/agent-executor/Makefile
@@ -111,6 +111,9 @@ uv-clean:
 	rm -rf .venv
 	@echo "✅ UV 缓存清理完成"
 
+do-pyinstaller:
+	uv run pyinstaller agent-executor.spec
+
 # 帮助信息
 help:
 	@echo "🚀 Agent-Executor - Makefile 帮助"
