--- a/agent-backend/deploy/docker/supervisord.conf
+++ b/agent-backend/deploy/docker/supervisord.conf
@@ -1,3 +1,13 @@
+[unix_http_server]
+file=/tmp/supervisor.sock
+chmod=0700
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
